--- a/afreebird/index.html
+++ b/afreebird/index.html
@@ -35,7 +35,7 @@
     
     <nav class="navbar fixed-top navbar-light navbar-expand navbar-custom ">
         <div class="container">
-            <a class="navbar-brand" href="/blog/">Blogs</a>
+            <a class="navbar-brand" href="/blog/">Videogame</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
             </button>
