--- a/afreebird/index.html
+++ b/afreebird/index.html
@@ -64,7 +64,9 @@
        <form action="" >
             <div class="modal-body">
           <input id="enter_input" type="text" placeholder="Password" class="form-control">
-          <p>Use for now: afb2020</p>
+          <br>
+          <p><em>Use for now: afb2020</em></p>
+          <p><em>Disclaimer: please don't share the password</em></p>
         </div>
         
         <!-- Modal footer -->
